--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,21 @@
 [tool.poetry]
 name = "badgerdb-python"
-version = "0.1.0"
+version = "0.3.0"
 description = "Python wrapper for BadgerDB"
-authors = ["Poorna Prakash SR<poornaprakashsr@gmail.com>"]
+authors = ["Poorna Prakash SR <poornaprakashsr@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.7"
 ctypes = "*"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
 unittest = "^2.0"
 tox = "^3.0"
 
 [tool.poetry.scripts]
-badgerdb = "badgerdb:main"
+badgerdb= "badgerdb_python.badger:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
