--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -68,4 +68,4 @@ jobs:
         with:
           packages-dir: dist/
           password: ${{ secrets.pypi_password }}
-          repository-url: https://pypi.org/project/badgerdb-python/
+          repository-url: https://pypi.org/project/badgerdb/
