--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,10 +25,13 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
-
-      - name: Build release distributions
+      
+      - name: Install dependencies
         run: |
-          # NOTE: put your own distribution build steps here.
+          python -m pip install --upgrade setuptools wheel twine
+
+      - name: Build source distribution
+        run: |
           python setup.py sdist
 
       - name: Upload distributions
