--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,14 +21,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+      - name: Set up Python
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
       
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade setuptools wheel twine
+          python -m pip install --upgrade pip
+          pip install setuptools
 
       - name: Build source distribution
         run: |
