--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,15 +21,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
       
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install setuptools
+          python -m pip install --upgrade setuptools wheel twine
 
       - name: Build source distribution
         run: |
