--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,7 +28,8 @@ jobs:
       
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade setuptools wheel twine
+          python -m pip install --upgrade pip
+          pip install setuptools wheel
 
       - name: Build source distribution
         run: |
